# starterkit

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_unix.sh  build_win.bat  make_mingw.sh  make_unix.sh
src/: CMakeLists.txt  console.c  console.h  console_ui.cpp  cousine_font.h  cpp_stuff.cpp  cpp_stuff.h  disco.cpp  disco.h  draw_3d.c  draw_3d.h  draw_ui.cpp  draw_ui.h  portable_endian.h  program.c  program.h  sk_gui.cpp  starterkit.c  starterkit.h  wrap_c2cpp.cpp  wrap_c2cpp.h  xyz.c  xyz.h  xyz_utils.h
src/cbuf/: cbuf.h  cbuf_test.c
src/cidx/: cidx.h  cidx_test.c
src/log/: log.c  log.h
src/xyz/: portable_endian.h  xyz.c  xyz.h
